--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.8.4",
+    "deepmerge": "^4.3.1",
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-gesture-handler": "^2.25.0",
